Final heading size updates

--- a/app/views/register-lasting-power-of-attorney/after-lpa-registered.html
+++ b/app/views/register-lasting-power-of-attorney/after-lpa-registered.html
@@ -88,9 +88,9 @@ Register a lasting power of attorney: After the lpa is registered
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-l">
+      <h1 class="govuk-heading-l">
         After the lasting power of attorney is registered
-      </h2>
+      </h1>
       
       <p>The LPA is only registered when:</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -110,7 +110,7 @@ Register a lasting power of attorney: After the lpa is registered
 
       <p>Anyone the donor has asked to be told about their LPA, known as ‘people to notify’, will only get notified about the intention to register. They won’t be told when the LPA is registered.</p>
 
-      <h2 class="govuk-heading-l">When attorneys can use the LPA</h2>
+      <h2 class="govuk-heading-m">When attorneys can use the LPA</h2>
 
       <p>The attorneys can only use the LPA when it’s been registered.</p>
 
@@ -124,7 +124,7 @@ Register a lasting power of attorney: After the lpa is registered
 
       <p>Find out more about <a href="https://draft-origin.publishing.service.gov.uk/xxx">how attorneys use the LPA.</a></p>
 
-      <h2 class="govuk-heading-l">Changes you need to report</h2>
+      <h2 class="govuk-heading-m">Changes you need to report</h2>
 
       <p>The attorney needs to <a href=""https://draft-origin.publishing.service.gov.uk/xxx">report changes to OPG</a> such as:</p>
       <ul class="govuk-list govuk-list--bullet">
@@ -141,7 +141,7 @@ Register a lasting power of attorney: After the lpa is registered
 
       <p>As long as the donor still has mental capacity, they can also report changes.</p>
 
-      <h2 class="govuk-heading-l">When the LPA ends</h2>
+      <h2 class="govuk-heading-m">When the LPA ends</h2>
 
       <p>There are several <a href="https://draft-origin.publishing.service.gov.uk/xxxx">reasons an LPA will end</a>including if:</p>
       <ul class="govuk-list govuk-list--bullet">
