--- a/app/views/register-lasting-power-of-attorney/attorney.html
+++ b/app/views/register-lasting-power-of-attorney/attorney.html
@@ -88,9 +88,9 @@ Register a lasting power of attorney: Agree to be an attorney
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-l">
+      <h1 class="govuk-heading-l">
         Agree to be an attorney
-      </h2>
+      </h1>
       
       <p>When acting as an attorney you’ll need to make decisions on the donor's behalf following the principles of the Mental Capacity Act 2005 and the <a href="/government/publications/mental-capacity-act-code-of-practice">Mental Capacity Act Code of Practice</a>.</p>
 
@@ -114,7 +114,7 @@ Register a lasting power of attorney: Agree to be an attorney
 
    <p>Read about <a href="https://draft-origin.publishing.service.gov.uk/link"> your responsibilities as an attorney and how to use the LPA </a> after it's registered.</p>
 
-   <h2 class="govuk-heading-l">How to agree</h2>
+   <h2 class="govuk-heading-m">How to agree</h2>
 
    <p>Make sure you understand:</p>
    <ul class="govuk-list govuk-list--bullet">
@@ -136,7 +136,7 @@ Register a lasting power of attorney: Agree to be an attorney
     <p>If your personal information is incorrect, you'll need to <a href="/make-lasting-power-of-attorney/contact-the-office-of-the-public-guardian">contact OPG</a>.</p>
  </div>
  
- <h3 class="govuk-heading-m">Read and sign the LPA online</h3>
+ <h3 class="govuk-heading-s">Read and sign the LPA online</h3>
 
  <p>You'll need documents or information to <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-type">prove your identity using GOV.UK One Login</a>.</p>
 
@@ -152,14 +152,14 @@ Register a lasting power of attorney: Agree to be an attorney
 </a>
 
 
- <h3 class="govuk-heading-m">Read and sign the LPA by post</h3>
+ <h3 class="govuk-heading-s">Read and sign the LPA by post</h3>
 
  <p>If you’ve received a letter from OPG about being an attorney, it should include the paper form. If not, <a href="/make-lasting-power-of-attorney/contact-the-office-of-the-public-guardian">contact OPG</a> and ask for a paper form to be sent to you.</p>
 
  <p>Even if you’ve been sent a paper form, you can sign the LPA online if you’d prefer. </p>
 
 
-   <h2 class="govuk-heading-l">If you do not want to be an attorney</h2>
+   <h2 class="govuk-heading-m">If you do not want to be an attorney</h2>
 
    <p>If you're listed as an attorney and you do not want to be one, you can:</p>
    <ul class="govuk-list govuk-list--bullet">
@@ -170,7 +170,7 @@ Register a lasting power of attorney: Agree to be an attorney
    <p>You can also  <a href="/object-registration-power-attorney">object to the registration</a> of an LPA if you've any concerns.</p>
 
    
- <h2 class="govuk-heading-l">After you've signed the LPA</h2>
+ <h2 class="govuk-heading-m">After you've signed the LPA</h2>
 
  <p>You cannot act as an attorney until <a href="/make-lasting-power-of-attorney/after-the-lpa-is-registered">the LPA has been registered with OPG.</a> </p>
 
