--- a/app/views/register-lasting-power-of-attorney/contact-office-of-public-guardian.html
+++ b/app/views/register-lasting-power-of-attorney/contact-office-of-public-guardian.html
@@ -88,9 +88,9 @@ Register a lasting power of attorney: Contact the Office of the Public Guardian
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-l">
+      <h1 class="govuk-heading-l">
         Contact the Office of the Public Guardian (OPG)
-      </h2>
+      </h1>
       
       <p>Contact the Office of the Public Guardian if you need help with making and registering an LPA.</p>
 
@@ -126,7 +126,7 @@ Register a lasting power of attorney: Contact the Office of the Public Guardian
           </ul>
         </div>
 
-        <h2 class="govuk-heading-l">If you have a concern</h2>
+        <h2 class="govuk-heading-m">If you have a concern</h2>
 
         <p>If you have concerns about either the LPA or the donor’s wellbeing, contact OPG’s Safeguarding Unit as soon as possible.</p>
 
