--- a/app/views/register-lasting-power-of-attorney/make-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/make-lpa.html
@@ -88,9 +88,9 @@ Register a lasting power of attorney: Make your LPA
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-l">
+      <h1 class="govuk-heading-l">
         Make your lasting power of attorney
-      </h2>
+      </h1>
       
       <p>While <a href="https://draft-origin.publishing.service.gov.uk/preparing-your-lpa">preparing to make your LPA</a> you should decide:</p>
 
@@ -106,7 +106,7 @@ Register a lasting power of attorney: Make your LPA
 
         <p>You can ask someone else to help you create the LPA, for example a family member, friend or solicitor but the decisions you make must be your own.</p>
 
-        <h2 class="govuk-heading-l">What you'll need</h2>
+        <h2 class="govuk-heading-m">What you'll need</h2>
 
         <p>You'll need:</p>
         
@@ -139,11 +139,11 @@ Register a lasting power of attorney: Make your LPA
 
               <p>If you’re eligible for a reduced fee for your LPA, you must also have the evidence to support your application. </p>
 
-              <h2 class="govuk-heading-l">Start making your LPA</h2>
+              <h2 class="govuk-heading-m">Start making your LPA</h2>
 
               <p>You can make an LPA online or by post. Your certificate provider and attorneys can use a different method to you.</p>
 
-              <h3 class="govuk-heading-m">Make your LPA online</h3>
+              <h3 class="govuk-heading-s">Make your LPA online</h3>
 
               <p>You'll need documents or information to  <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-types">prove your identify using GOV.UK One Login.</a></p>
 
@@ -158,11 +158,11 @@ Register a lasting power of attorney: Make your LPA
                 </svg>
               </a>
 
-              <h3 class="govuk-heading-m">Make an LPA by post</h3>
+              <h3 class="govuk-heading-s">Make an LPA by post</h3>
 
               <p>You'll need to <a href="https://draft-origin.publishing.service.gov.uk/contact-xxxx">contact the Office of the Public Guardian (OPG)</a> to request an application pack by post. This pack will include the forms and instructions.</p>
 
-              <h2 class="govuk-heading-s">After you've signed and paid for the LPA</h2>
+              <h2 class="govuk-heading-m">After you've signed and paid for the LPA</h2>
 
               <p>Your certificate provider and attorneys will be contacted using the details you provide. They’ll be asked to check the details of your LPA.</p>
 
