--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -88,9 +88,9 @@ Register a lasting power of attorney: Act as a certificate provider
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds govuk-prototype-kit-common-templates-mainstream-guide-body">
       
-      <h2 class="govuk-heading-l">
+      <h1 class="govuk-heading-l">
         Act as a certificate provider
-      </h2>
+      </h1>
       
       <p>You may be asked to be a certificate provider to help someone (the donor) when they’re making their lasting power of attorney (LPA).</p>
       <p>Providing a certificate for an LPA confirms that in your opinion:</p>
@@ -111,7 +111,7 @@ Register a lasting power of attorney: Act as a certificate provider
       </ul>
 
 
-<h2 class="govuk-heading-l">Discuss the LPA with the donor</h2>
+<h2 class="govuk-heading-m">Discuss the LPA with the donor</h2>
 
 <p>You’ll need to read the LPA and talk to the donor to check they understand it. You should discuss the LPA in private, without attorneys or other people present.</p>
 <p>You should consider if they can: </p>
@@ -124,30 +124,30 @@ Register a lasting power of attorney: Act as a certificate provider
 
 <p>If they seem unusually anxious or are acting differently to how they normally would, consider if they’re being pressured into making the LPA.</p>
 
-<h2 class="govuk-heading-l">If you have concerns about the LPA registration</h2>
+<h2 class="govuk-heading-m">If you have concerns about the LPA registration</h2>
 
 <p>If you do not feel you can certify the LPA, do not sign it and  <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">contact the Office of the Public Guardian (OPG)</a> instead.</p>
 
 <p>You can also <a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">object to the LPA</a> which could prevent it from being registered.</p>
 
 
-<h2 class="govuk-heading-l">If you do not have concerns about the LPA registration</h2>
+<h2 class="govuk-heading-m">If you do not have concerns about the LPA registration</h2>
 
-<h3 class="govuk-heading-m">Sign the LPA as a witness</h3>
+<h3 class="govuk-heading-s">Sign the LPA as a witness</h3>
 
 <p>If you’re confident the donor understands the LPA you’ll need to watch the donor sign the LPA. You must confirm you’ve witnessed this by signing it yourself, either online or on paper.</p>
 
-<h3 class="govuk-heading-m">Prove your identity and sign to certify the LPA</h3>
+<h3 class="govuk-heading-s">Prove your identity and sign to certify the LPA</h3>
 
 <p>You’ll need to prove your identity before you can provide a certificate.</p>
 
 <p>If you fail the identity check, the donor will have to make a new LPA.</p>
 
-<h2 class="govuk-heading-l">If you do not want to be a certificate provider</h2>
+<h2 class="govuk-heading-m">If you do not want to be a certificate provider</h2>
 
 <p>If you do not want to be someone's certificate provider you can refuse the role by telling the donor to contact OPG to start the LPA process again.</p>
 
-<h2 class="govuk-heading-l">How to provide a certificate for the LPA</h2>
+<h2 class="govuk-heading-m">How to provide a certificate for the LPA</h2>
 
 <p>Read the LPA and talk to the donor about it. Witness the donor's signature.</p>
 
@@ -159,7 +159,7 @@ Register a lasting power of attorney: Act as a certificate provider
 
 <p>You'll also need to prove your identity as part of the process.</p>
 
-<h3 class="govuk-heading-m">Providing a certificate online</h3>
+<h3 class="govuk-heading-s">Providing a certificate online</h3>
 
 <p>You’ll need documents or information to <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-types">prove your identity using GOV.UK One Login.</a>You'll also need the reference number from your certificate provider email or letter.</p>
 
@@ -172,11 +172,11 @@ Register a lasting power of attorney: Act as a certificate provider
   </svg>
 </a>
 
-<h2 class="govuk-heading-l">Providing a certificate by post</h2>
+<h2 class="govuk-heading-m">Providing a certificate by post</h2>
 
 <p>If you've received a letter from OPG about being a certificate provider, it should include the paper form. If not, <a href="https://www.gov.uk/make-lasting-power-of-attorney/contact-the-office-of-the-public-guardian">contact OPG</a> and ask for a paper form to be sent to you.</p>
 
-<h2 class="govuk-heading-l">After you’ve certified the LPA</h2>
+<h2 class="govuk-heading-m">After you’ve certified the LPA</h2>
 
 <p>OPG will let the donor know when it has received your certification and has confirmed your identity.</p>
 
