Updated wording on overview

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -148,7 +148,7 @@
 
   <h2 class="govuk-heading-m">Get help from the Office of the Public Guardian</h2>
 
-<p><a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">Contact Office of the Public Guardian (OPG)</a> if you need help deciding if you should make an LPA or if you have any concerns.</p>
+<p><a href="/register-lasting-power-of-attorney/contact-office-of-public-guardian">Contact the Office of the Public Guardian (OPG)</a> if you need help deciding if you should make an LPA or if you have any concerns.</p>
 
       <nav class="govuk-prototype-kit-common-templates-pagination" role="navigation" aria-label="Pagination">
 
