Fixing next chapter link in Certificate Provider content

--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -191,7 +191,7 @@ Register a lasting power of attorney: Act as a certificate provider
         },
         next: {
           labelText: "Agree to be an attorney",
-          href: "#"
+          href: "/register-lasting-power-of-attorney/attorney"
         }
       }) }}
 
