--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -165,7 +165,7 @@ Register a lasting power of attorney: Act as a certificate provider
 
 <p>If you’ve not used GOV.UK One Login before, you’ll be asked to set up an account.</p>
 
-<a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+<a href="https://demo.app.modernising.opg.service.justice.gov.uk/certificate-provider-login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
   Start now
   <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
     <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
