use env var for service URL

--- a/app/views/register-lasting-power-of-attorney/attorney.html
+++ b/app/views/register-lasting-power-of-attorney/attorney.html
@@ -144,7 +144,7 @@ Register a lasting power of attorney: Agree to be an attorney
 
  <p>You’ll also need the LPA reference number. This will be in the letter or email you received telling you about the LPA.</p>
 
- <a href="https://demo.app.modernising.opg.service.justice.gov.uk/attorney-login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+ <a href="{{ data['mrlpa_service_url'] }}/attorney-login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
   Start now
   <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
     <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
