--- a/app/views/register-lasting-power-of-attorney/certificate-provider.html
+++ b/app/views/register-lasting-power-of-attorney/certificate-provider.html
@@ -161,11 +161,11 @@ Register a lasting power of attorney: Act as a certificate provider
 
 <h3 class="govuk-heading-s">Providing a certificate online</h3>
 
-<p>You’ll need documents or information to <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-types">prove your identity using GOV.UK One Login.</a>You'll also need the reference number from your certificate provider email or letter.</p>
+<p>You’ll need documents or information to <a href="https://www.sign-in.service.gov.uk/about/checking-users-identities/evidence-types">prove your identity using GOV.UK One Login.</a>You'll also need the reference number from your certificate provider email or letter.</p>
 
 <p>If you’ve not used GOV.UK One Login before, you’ll be asked to set up an account.</p>
 
-<a href="https://demo.app.modernising.opg.service.justice.gov.uk/certificate-provider-login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+<a href="{{ data['mrlpa_service_url'] }}/certificate-provider-login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
   Start now
   <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
     <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
