--- a/app/views/register-lasting-power-of-attorney/make-lpa.html
+++ b/app/views/register-lasting-power-of-attorney/make-lpa.html
@@ -151,7 +151,7 @@ Register a lasting power of attorney: Make your LPA
 
               <p>You can save and return to your application at a later date if you need to.</p>
 
-              <a href="https://demo.app.modernising.opg.service.justice.gov.uk/login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+              <a href="{{ data['mrlpa_service_url'] }}/login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
                 Start now
                 <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
                   <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
