Fixing broken link to Make an LPA from Overview chapter links

--- a/app/views/register-lasting-power-of-attorney.html
+++ b/app/views/register-lasting-power-of-attorney.html
@@ -53,7 +53,7 @@
               <a href="/register-lasting-power-of-attorney/prepare-lpa">Preparing to make your lasting power of attorney</a>
             </li>
             <li class="govuk-prototype-kit-common-templates-contents-list__list-item govuk-prototype-kit-common-templates-contents-list__list-item--dashed">
-              <a href="#">
+              <a href="/register-lasting-power-of-attorney/make-lpa">
                 Make your lasting power of attorney
               </a>
             </li>
