--- a/app/views/register-lasting-power-of-attorney/attorney.html
+++ b/app/views/register-lasting-power-of-attorney/attorney.html
@@ -112,13 +112,13 @@ Register a lasting power of attorney: Agree to be an attorney
      <li>use the LPA unless it is registered</li>
    </ul>
 
-   <p>Read about <a href="https://draft-origin.publishing.service.gov.uk/link"> your responsibilities as an attorney and how to use the LPA </a> after it's registered.</p>
+
 
    <h2 class="govuk-heading-m">How to agree</h2>
 
    <p>Make sure you understand:</p>
    <ul class="govuk-list govuk-list--bullet">
-     <li><a href="https://draft-origin.publishing.service.gov.uk/xxxx">your responsibilities as an attorney</a></li>
+     <li><a href="/use-lasting-power-attorney">your responsibilities as an attorney</a></li>
      <li>how to <a href="/make-decisions-for-someone/making-decisions">make decisions on the donor's behalf</a></li>
      <li>when and how you should make decisions with any other attorneys</li>
       <li>any restrictions and conditions</li>
@@ -144,7 +144,7 @@ Register a lasting power of attorney: Agree to be an attorney
 
  <p>You’ll also need the LPA reference number. This will be in the letter or email you received telling you about the LPA.</p>
 
- <a href="{{ data['mrlpa_service_url'] }}/attorney-login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+ <a href="https://demo.app.modernising.opg.service.justice.gov.uk/attorney-login" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
   Start now
   <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
     <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
